--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,26 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.iws
+*.ipr
+*.iml
+*~
+
+.idea/
+.settings
+.project
+.classpath
+.vscode
+
+target/
+tmp/
+
+pom.xml.releaseBackup
+release.properties
+dependency-reduced-pom.xml
+
+.DS_Store*
+Thumbs.db
+.vertx/
+
