--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,8 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-hazelcast</artifactId>
+            <artifactId>vertx-zookeeper</artifactId>
             <version>${vertx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-aws</artifactId>
-            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
